--- a/about.html
+++ b/about.html
@@ -72,12 +72,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Sobre mim</h2>
-           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
-            <figure class="profile-figure text-center text-lg-end">
-              <img src="assets/img/profile/pro2.jpg" alt="Portrait of Stella" class="img-fluid profile-photo">
-            </figure>
-          </div>
-        </div>
+         
+
         
       </div><!-- End Section Title -->
 
@@ -104,7 +100,13 @@ Com adaptabilidade e foco em excelência, busco constantemente novos desafios pa
             </div>
           </div>
 
-
+          <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
+            <figure class="profile-figure text-center text-lg-end">
+              <img src="assets/img/profile/pro2.jpg" alt="Portrait of Stella" class="img-fluid profile-photo">
+            </figure>
+          </div>
+        </div>
+        <!-- End Intro + Photo -->
 
         <!-- Skills Grid -->
         <div class="mb-5">
