--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@ Com adaptabilidade e foco em excelência, busco constantemente novos desafios pa
 
           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
             <figure class="profile-figure text-center text-lg-end">
-              <img src="assets/img/profile/pro2.jpg" alt="Portrait of Stella" class="img-fluid profile-photo">
+              <img src="assets/img/profile/me.jpeg" alt="Portrait of Stella" class="img-fluid profile-photo">
             </figure>
           </div>
         </div>
