--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="col-lg-6 order-1 order-lg-2">
             <div class="hero-image" data-aos="zoom-in" data-aos-delay="300">
               <div class="image-wrapper">
-                <img src="assets/img/profile/me.jpeg" alt="Sarah Mitchell" class="img-fluid">
+                <img src="assets/img/profile/euh.jpeg" alt="Sarah Mitchell" class="img-fluid">
                   </div>
                 </div>
               </div>
