--- a/portfolio.html
+++ b/portfolio.html
@@ -30,24 +30,29 @@
 <body class="portfolio-page">
 
   <header id="header" class="header d-flex align-items-center light-background sticky-top">
-    <div class="container position-relative d-flex align-items-center justify-content-between">
+  <div class="container position-relative d-flex align-items-center justify-content-between">
 
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="about.html">Sobre mim</a></li>
-          <li><a href="portfolio.html"class="active">Meus trabalhos</a></li>
-          <li><a href="contact.html">Contato</a></li>
-        </ul>
-      </nav>
+    <!-- MENU -->
+    <nav id="navmenu" class="navmenu">
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="about.html">Sobre mim</a></li>
+        <li><a href="portfolio.html" class="active">Meus trabalhos</a></li>
+        <li><a href="contact.html">Contato</a></li>
+      </ul>
+    </nav>
 
-      <div class="header-social-links">
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      </div>
+    <!-- BOTÃO MENU MOBILE (OBRIGATÓRIO) -->
+    <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
 
+    <!-- REDES SOCIAIS -->
+    <div class="header-social-links d-none d-xl-flex">
+      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
     </div>
-  </header>
+
+  </div>
+</header>
 
   <main class="main">
 
