--- a/contact.html
+++ b/contact.html
@@ -39,31 +39,30 @@
 <body class="contact-page">
 
   <header id="header" class="header d-flex align-items-center light-background sticky-top">
-    <div class="container position-relative d-flex align-items-center justify-content-between">
+  <div class="container position-relative d-flex align-items-center justify-content-between">
 
-      <!-- <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-      <img src="assets/img/logo.webp" alt="">
-      <h1 class="sitename">FolioOne</h1> 
-    </a> -->
+    <!-- MENU -->
+    <nav id="navmenu" class="navmenu">
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="about.html">Sobre mim</a></li>
+        <li><a href="portfolio.html">Meus trabalhos</a></li>
+        <li><a href="contact.html" class="active">Contato</a></li>
+      </ul>
+    </nav>
 
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="about.html">Sobre mim</a></li>
-          <li><a href="portfolio.html">Meus trabalhos</a></li>
-          <li><a href="contact.html" class="active">Contato</a></li>
-        </ul>
-      </nav>
+    <!-- BOTÃO MENU MOBILE (OBRIGATÓRIO) -->
+    <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
 
-      <div class="header-social-links">
- 
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-
-      </div>
-
+    <!-- REDES SOCIAIS -->
+    <div class="header-social-links d-none d-xl-flex">
+      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
     </div>
-  </header>
+
+  </div>
+</header>
+
 
   <main class="main">
 
